about us in all languages done

--- a/about-us.eng.html
+++ b/about-us.eng.html
@@ -48,97 +48,92 @@
   <section class="about-us-page">
     <div class="container">
       <h2>
-        О компании "NSP"
+        About the company "NSP"
       </h2>
       <div class="about-us-page-text">
         <p>
-          Компания «NSP» была основана в 2003 году как компания разработчик программного обеспечения (ПО). В 2008 году, имея успешный опыт по ведению и реализации проектов на рынке Кыргызстана, компания прошла перерегистрацию и получила свое нынешнее название NSP (Network/Servers/Power).
-          Основные направления деятельности компании NSP нашли свое отражение в её названии - Сетевые технологии/Сервера и системы хранения данных/Гарантированные энергосберегающие системы.
+          The NSP company was founded in 2003 as a software development company. In 2008, having successful experience in managing and implementing projects in the Kyrgyz market, the company underwent re-registration and received its current name NSP (Network/Servers/Power). The main activities of the NSP company are reflected in its name - Network technologies/Servers and data storage systems/Guaranteed energy-saving systems.
         </p>
-        <h5 style="font-size: 22px;">ГАРАНТИРОВАННЫЕ ЭНЕРГОСБЕРЕГАЮЩИЕ СИСТЕМЫ</h5>
+        <h5 style="font-size: 22px;">GUARANTEED ENERGY SAVING SYSTEMS</h5>
         <p>
-          Гарантированные энергосберегающие системы представлены сразу в нескольких областях.
+          Guaranteed energy-saving systems are presented in several areas at once.
         </p>
-        <h5>Электрооборудование и кабеленесущие системы.</h5>
+        <h5>Electrical equipment and cable support systems.</h5>
         <p>
-          Многолетние сотрудничество с лидером в производстве электрооборудования корпорацией Schneider Electric, позволило нашей компании осуществить одну из главных целей: сделать энергию безопасной, надежной, эффективной и производительной. Компания NSP предлагает продукты в области промышленной автоматизации, в области распределения электроэнергии, электроустановочные системы, кабеленесущие системы и системы управления.
-        </p>
-        <p>
-          Соблюдение всех норм безопасности и четкое соответствие всем европейским стандартам, позволяет не только долго и успешно эксплуатировать электрооборудование Schneider Electric, но значительно сократить расходы на «конечную стоимость владения» этим оборудованием.
+          Long-term cooperation with the leader in the production of electrical equipment, Schneider Electric Corporation, has allowed our company to achieve one of its main goals: to make energy safe, reliable, efficient and productive. NSP offers products in the field of industrial automation, power distribution, electrical installation systems, cable management systems and control systems.
         </p>
         <p>
-          Кроме того, Schneider Electric в своей продуктовой линейке широко представляет системы безопасности и системы телевизионного наблюдения Pelco. В настоящий момент компания NSP ведет несколько проектов в данной области, которые планируется завершить в период 2012-2013 гг. В рамках этих проектов специалисты NSP прошли обучение и профессиональную подготовку в европейском тренинговом центре Pelco, что позволит нам предоставить максимальный уровень сервиса и поддержки всем нашим Заказчикам.
-        </p>
-        <h5>Генераторные установки</h5>
-        <p>
-          Данное направление представлено портативными устройствами и стационарными станциям французского производителя SDMO. Наша компания имеет статус официального представителя в Средней Азии. Генераторные установки SDMO рассчитаны на эксплуатацию в сложных условия. Именно поэтому они успешно применяются нашими Заказчиками для решения таких задач как обеспечение гарантированного электропитания помещений, производственных зданий, сложного медицинского и ветеринарного оборудования в условиях высокогорья и низких температур. Квалификация наших специалистов позволяет нашей компании производить монтаж и ввод в эксплуатацию полностью готовой системы энергоснабжения с интегрированной в неё ДГУ.
-        </p>
-        <h5>Насосное оборудование</h5>
-        <p>
-          Насосное оборудование для систем отопления, водоснабжения, пожаротушения, водоотведения, кондиционирования и охлаждения, которое используется в зданиях и сооружениях любого назначения, а также в коммунальном хозяйстве, промышленности и в частных домах. В этом направлении мы сотрудничаем с таким европейским производителем как Willo. Наши специалисты имеют опыт инсталляции насосного оборудования в условиях городской и сельской местности.
+          Compliance with all safety standards and strict compliance with all European standards allows you not only to operate Schneider Electric electrical equipment for a long time and successfully, but to significantly reduce the costs of the “final cost of ownership” of this equipment.
         </p>
         <p>
-          Источники бесперебойного питания – это гарантия сохранности ваших данных и критического оборудования. Наша компания предлагает широкий спектр продуктов от компании APC by Schneider Electric для настольных ПК, рабочих станций, для серверов и систем хранения данных, для средних и крупных центров обработки данных, а так же для промышленных и производственных нужд. Наши инженера систематически проходят курсы повышения квалификации. Богатый опыт, накопленный нашей компанией в этой сфере позволяет нам не только внедрять ИБП в промышленную и IT структуры Заказчика, но и оказывать консультационные услуги по проектированию, обучению персонала, обслуживанию и аудиту существующих систем, а иногда и просто поддержать Заказчика необходимой информацией.
+          In addition, Schneider Electric widely represents Pelco security systems and television surveillance systems in its product line. Currently, NSP is conducting several projects in this area, which are planned to be completed in the period 2012-2013. As part of these projects, NSP specialists underwent training and professional development at the European Pelco training center, which will allow us to provide the maximum level of service and support to all our Customers.
+        </p>
+        <h5>Generator sets</h5>
+        <p>
+          This direction is represented by portable devices and stationary stations from the French manufacturer SDMO. Our company has the status of an official representative in Central Asia. SDMO generator sets are designed for operation in difficult conditions. That is why they are successfully used by our Customers to solve such problems as providing guaranteed power supply to premises, industrial buildings, complex medical and veterinary equipment in high altitude and low temperature conditions. The qualifications of our specialists allow our company to install and commission a completely finished power supply system with a diesel generator set integrated into it.
+        </p>
+        <h5>Pump equipment</h5>
+        <p>
+          Pumping equipment for heating, water supply, fire extinguishing, drainage, air conditioning and cooling systems, which is used in buildings and structures for any purpose, as well as in public utilities, industry and private homes. In this direction, we cooperate with such a European manufacturer as Willo. Our specialists have experience in installing pumping equipment in urban and rural areas.
         </p>
         <p>
-          Еще одно направление деятельности NSP связанно партнерскими отношениями с компанией BOSCH. Компетентность и опыт позволяет нам представлять всю линейку продуктов BOSCH: солнечная энергетика, системная интеграция строительных технологий, котельное оборудование, электроинструменты, системы безопасности и оповещения, мобильные дискуссионные системы.
+          Uninterruptible power supplies guarantee the safety of your data and critical equipment. Our company offers a wide range of products from APC by Schneider Electric for desktop PCs, workstations, servers and storage systems, for medium and large data centers, as well as for industrial and manufacturing needs. Our engineers regularly undergo advanced training courses. The rich experience accumulated by our company in this area allows us not only to implement UPS into the Customer’s industrial and IT structures, but also to provide consulting services on design, personnel training, maintenance and audit of existing systems, and sometimes simply support the Customer with the necessary information.
+        </p>
+        <p>
+          Another area of NSP activity is related to partnerships with BOSCH. Competence and experience allows us to represent the entire line of BOSCH products: solar energy, system integration of building technologies, boiler equipment, power tools, security and warning systems, mobile discussion systems.
         </p>
         <h5 style="font-size: 22px;">
-          СЕТЕВЫЕ ТЕХНОЛОГИИ:
+          NETWORK TECHNOLOGIES:
         </h5>
         <p>
-          Унифицированные коммуникации – это больше, чем просто телефонная система. Это единая система конечных устройств и программных приложений, объединяющая возможности сотовых, стационарных телефонов и рабочих терминалов по передаче данных, видео и голоса. Унифицированные коммуникации дают расширенные возможности совместной работы в режиме реального времени вне зависимости от удаленности партнеров или сотрудников друг от друга. Являясь официальным сертифицированным партнером компании 3CX, наша компания предоставляет качественные услуги по внедрению IP телефонной системы (VoIP) любой сложности.
+          Unified Communications is more than just a phone system. This is a unified system of end devices and software applications that combines the capabilities of cellular, landline phones and work terminals for transmitting data, video and voice. Unified communications provide enhanced opportunities for collaboration in real time, regardless of the distance of partners or employees from each other. As an official certified partner of 3CX, our company provides high-quality services for the implementation of an IP telephone system (VoIP) of any complexity.
         </p>
         <p>
-          Сетевое оборудование – это платформа для организации единой рабочей среды, которая позволяет объединить исполнительные устройства, системы слежения, датчики контроля и рабочие места.
-          В этом направлении мы тесно взаимодействуем с известными мировыми производителями CISCO, 3CX, Avaya, Polycom и др.
-          Интеллектуальное здание – это Система Управления Зданием (офис, жилой дом или квартира, производственное или промышленное помещение, животноводческое или тепличное хозяйство, и т.д.). Владелец такого здания не тратит время на контроль за работой инженерного оборудования. Эту функцию выполняют автоматизированные комплексы управления. Они не только включат, выключат и отрегулируют работу систем отопления, вентиляции и кондиционирования воздуха, освещения и электроснабжения, но и проинформируют оператора о возможных неполадках в работе систем, напомнят о необходимости проведения регламентных работ. При возникновении чрезвычайных ситуаций они приведут в действие необходимое оборудование и оповестят обитателей здания о путях и способах эвакуации.
+          Network equipment is a platform for organizing a unified working environment that allows you to combine actuators, tracking systems, control sensors and workstations. In this direction, we closely cooperate with well-known global manufacturers CISCO, 3CX, Avaya, Polycom, etc. An intelligent building is a Building Management System (office, residential building or apartment, production or industrial premises, livestock or greenhouse farm, etc. ). The owner of such a building does not waste time monitoring the operation of engineering equipment. This function is performed by automated control systems. They will not only turn on, turn off and adjust the operation of heating, ventilation and air conditioning, lighting and power supply systems, but will also inform the operator about possible problems with the systems and remind them of the need for routine maintenance. In the event of an emergency, they will activate the necessary equipment and notify building occupants of the routes and methods of evacuation.
         </p>
-        <h5>СЕРВЕРЫ И СИСТЕМЫ ХРАНЕНИЯ ДАННЫХ</h5>
+        <h5>SERVERS AND DATA STORAGE SYSTEMS</h5>
         <p>
-          Центры обработки, управления, хранения и защиты данных, документов, каталогов и т.д. – это ключевое звено каждой организации и предприятия. Основой таких решений служат принципы производительности, масштабируемости, функциональности, динамичности и экономической выгоды.
+          Centers for processing, managing, storing and protecting data, documents, catalogs, etc. - This is a key link in every organization and enterprise. The basis of such solutions is the principles of performance, scalability, functionality, dynamism and economic benefit.
         </p>
         <p>
-          В этом направлении мы тесно взаимодействуем с известными мировыми производителями компьютерной и серверной техники, устройствами по оперативному сбору и обработке данных. Такими как ORACLE (Sun Microsystems), Fujitsu, Motorola.
+          In this direction, we closely cooperate with well-known global manufacturers of computer and server equipment, devices for rapid data collection and processing. Such as ORACLE (Sun Microsystems), Fujitsu, Motorola.
         </p>
         <p>
-          Разработка и внедрение систем ВИРТУАЛИЗАЦИИ и управления документооборотом позволяет нашим Заказчикам сокращать расходы на эксплуатацию и дополнительное приобретение оборудования в IT подразделения, эффективно вести складской и инвентаризационный учет.
+          The development and implementation of VIRTUALIZATION and document management systems allows our Customers to reduce operating costs and additional purchases of equipment in the IT department, and effectively maintain warehouse and inventory records.
         </p>
-        <h5>ПЕРСОНАЛ И СОТРУДНИКИ</h5>
+        <h5>STAFF AND EMPLOYEES</h5>
         <p>
-          Делая ставку на компетентность своих сотрудников, компания NSP систематически проводит их обучение на заводах производителей и дистрибьюторских платформах в Москве, Алматы, Франции, Бельгии, Германии. Это подтверждено соответствующими сертификатами. В распоряжении наших Заказчиков квалифицированные инженера, которые готовы осуществить любое техническое решение «под ключ».
+          Focusing on the competence of its employees, NSP systematically trains them at manufacturing plants and distribution platforms in Moscow, Almaty, France, Belgium, and Germany. This is confirmed by relevant certificates. Our Customers have qualified engineers at their disposal who are ready to implement any technical solution on a turnkey basis.
         </p>
-        <h5>ПРИНЦИПЫ РАБОТЫ</h5>
+        <h5>WORK PRINCIPLES</h5>
         <p>
-          В своей работе компания NSP использует системный и индивидуальный подход к проектированию решений для каждого Заказчика. Мы предлагаем оригинальное оборудование, разумные цены, качественное обслуживание, профессиональное консультирование, обучение персонала и самое главное - ПАРТНЕРСКОЕ ОТНОШЕНИЕ.
+          In its work, NSP uses a systematic and individual approach to designing solutions for each Customer. We offer original equipment, reasonable prices, quality service, professional consulting, staff training and most importantly - PARTNERSHIP.
         </p>
         <p>
-          Мы сотрудничаем только с проверенными вендорами, что обеспечивает:
+          We cooperate only with trusted vendors, which ensures:
           <br>
           - Гарантию качества продукции.
+          <br>- Product quality guarantee.<br>
+          - Providing warranty and post-warranty service.
           <br>
-          - Любое решение только по приемлемым ценам.
+          - Timely and comprehensive consultations.
           <br>
-          - Предоставление гарантийного и постгарантийного сервиса.
+          - Wide range of products.
           <br>
-          - Своевременные и исчерпывающие консультации.
+          - Individual approach.
           <br>
-          - Широкий ассортимент продукции.
-          <br>
-          - Индивидуальный подход.
-          <br>
-          - Профессиональный сервис.
+          - Professional service.
         </p>
-        <h5>СЕРВИСНОЕ ОБСЛУЖИВАНИЕ</h5>
+        <h5>SERVICE MAINTENANCE</h5>
         <p>
-          Компания NSP располагает складом запасных частей, который позволяет осуществлять гарантийное обслуживание оборудования в короткий срок.
+          The NSP company has a spare parts warehouse, which allows for warranty service of equipment in a short time.
         </p>
-        <h5>НАШИ ЗАКАЗЧИКИ</h5>
+        <h5>OUR CUSTOMERS</h5>
         <p>
-          Широкая сфера интересов компании NSP позволяет удовлетворять потребности наших клиентов как в государственном так и в частном секторе.
+          NSP's broad range of interests allows us to meet the needs of our clients in both the public and private sectors.
         </p>
         <p>
-          Мы создаём благоприятные интеллектуально-технические условия для успешной деятельности и развития Заказчика!
+          We create favorable intellectual and technical conditions for the successful activities and development of the Customer!
         </p>
       </div>
     </div>
