--- a/about-us.kg.html
+++ b/about-us.kg.html
@@ -48,97 +48,94 @@
   <section class="about-us-page">
     <div class="container">
       <h2>
-        О компании "NSP"
+        "NSP" компаниясы жөнүндө
       </h2>
       <div class="about-us-page-text">
         <p>
-          Компания «NSP» была основана в 2003 году как компания разработчик программного обеспечения (ПО). В 2008 году, имея успешный опыт по ведению и реализации проектов на рынке Кыргызстана, компания прошла перерегистрацию и получила свое нынешнее название NSP (Network/Servers/Power).
-          Основные направления деятельности компании NSP нашли свое отражение в её названии - Сетевые технологии/Сервера и системы хранения данных/Гарантированные энергосберегающие системы.
+          NSP компаниясы 2003-жылы программалык камсыздоону иштеп чыгуучу компания катары түзүлгөн. 2008-жылы Кыргызстандын рыногунда долбоорлорду башкарууда жана ишке ашырууда ийгиликтүү тажрыйбага ээ болгон компания кайра каттоодон өтүп, NSP (Network/Servers/Power) азыркы аталышын алган. NSP компаниясынын негизги ишмердүүлүгү анын аталышында чагылдырылган - Тармактык технологиялар/Серверлер жана маалыматтарды сактоо системалары/Кепилденген энергияны үнөмдөө системалары.
         </p>
-        <h5 style="font-size: 22px;">ГАРАНТИРОВАННЫЕ ЭНЕРГОСБЕРЕГАЮЩИЕ СИСТЕМЫ</h5>
+        <h5 style="font-size: 22px;">ГАРАНИЯЛЫК ЭНЕРГИЯНЫ үнөмдөө системалары</h5>
         <p>
-          Гарантированные энергосберегающие системы представлены сразу в нескольких областях.
+          Кепилденген энергияны үнөмдөө системалары бир эле учурда бир нече багыттар боюнча сунушталат.
         </p>
-        <h5>Электрооборудование и кабеленесущие системы.</h5>
+        <h5>Электр жабдуулары жана кабелдик колдоо системалары.</h5>
         <p>
-          Многолетние сотрудничество с лидером в производстве электрооборудования корпорацией Schneider Electric, позволило нашей компании осуществить одну из главных целей: сделать энергию безопасной, надежной, эффективной и производительной. Компания NSP предлагает продукты в области промышленной автоматизации, в области распределения электроэнергии, электроустановочные системы, кабеленесущие системы и системы управления.
-        </p>
-        <p>
-          Соблюдение всех норм безопасности и четкое соответствие всем европейским стандартам, позволяет не только долго и успешно эксплуатировать электрооборудование Schneider Electric, но значительно сократить расходы на «конечную стоимость владения» этим оборудованием.
+          Электр жабдууларын өндүрүү боюнча лидер Schneider Electric Corporation менен узак мөөнөттүү кызматташуу биздин компанияга өзүнүн негизги максаттарынын бирине жетүүгө мүмкүндүк берди: энергияны коопсуз, ишенимдүү, эффективдүү жана жемиштүү кылуу. NSP өнөр жай автоматташтыруу, электр энергиясын бөлүштүрүү, электр орнотуу системалары, кабелдик башкаруу системалары жана башкаруу системалары тармагында өнүмдөрдү сунуш кылат.
         </p>
         <p>
-          Кроме того, Schneider Electric в своей продуктовой линейке широко представляет системы безопасности и системы телевизионного наблюдения Pelco. В настоящий момент компания NSP ведет несколько проектов в данной области, которые планируется завершить в период 2012-2013 гг. В рамках этих проектов специалисты NSP прошли обучение и профессиональную подготовку в европейском тренинговом центре Pelco, что позволит нам предоставить максимальный уровень сервиса и поддержки всем нашим Заказчикам.
-        </p>
-        <h5>Генераторные установки</h5>
-        <p>
-          Данное направление представлено портативными устройствами и стационарными станциям французского производителя SDMO. Наша компания имеет статус официального представителя в Средней Азии. Генераторные установки SDMO рассчитаны на эксплуатацию в сложных условия. Именно поэтому они успешно применяются нашими Заказчиками для решения таких задач как обеспечение гарантированного электропитания помещений, производственных зданий, сложного медицинского и ветеринарного оборудования в условиях высокогорья и низких температур. Квалификация наших специалистов позволяет нашей компании производить монтаж и ввод в эксплуатацию полностью готовой системы энергоснабжения с интегрированной в неё ДГУ.
-        </p>
-        <h5>Насосное оборудование</h5>
-        <p>
-          Насосное оборудование для систем отопления, водоснабжения, пожаротушения, водоотведения, кондиционирования и охлаждения, которое используется в зданиях и сооружениях любого назначения, а также в коммунальном хозяйстве, промышленности и в частных домах. В этом направлении мы сотрудничаем с таким европейским производителем как Willo. Наши специалисты имеют опыт инсталляции насосного оборудования в условиях городской и сельской местности.
+          Бардык коопсуздук стандарттарын сактоо жана бардык европалык стандарттарды катуу сактоо Schneider Electric электр жабдууларын узак убакытка жана ийгиликтүү иштетүүгө гана эмес, бул жабдууга "элик кылуунун акыркы наркынын" чыгымдарын олуттуу кыскартууга мүмкүндүк берет.
         </p>
         <p>
-          Источники бесперебойного питания – это гарантия сохранности ваших данных и критического оборудования. Наша компания предлагает широкий спектр продуктов от компании APC by Schneider Electric для настольных ПК, рабочих станций, для серверов и систем хранения данных, для средних и крупных центров обработки данных, а так же для промышленных и производственных нужд. Наши инженера систематически проходят курсы повышения квалификации. Богатый опыт, накопленный нашей компанией в этой сфере позволяет нам не только внедрять ИБП в промышленную и IT структуры Заказчика, но и оказывать консультационные услуги по проектированию, обучению персонала, обслуживанию и аудиту существующих систем, а иногда и просто поддержать Заказчика необходимой информацией.
+          Мындан тышкары, Schneider Electric өзүнүн продукт линиясында Pelco коопсуздук системаларын жана телекөзөмөл системаларын кеңири көрсөтөт. Учурда НСП бул багытта бир нече долбоорлорду ишке ашырууда, аларды 2012-2013-жылдар аралыгында бүтүрүү пландалууда. Бул долбоорлордун алкагында NSP адистери европалык Pelco окуу борборунда окуудан жана квалификациясын жогорулатуудан өтүштү, бул бизге бардык Кардарларыбызга максималдуу деңгээлде тейлөө жана колдоо көрсөтүүгө мүмкүндүк берет.
+        </p>
+        <h5>Генератор топтомдору</h5>
+        <p>
+          Бул багыт француздук SDMO өндүрүүчүсүнүн көчмө аппараттары жана стационардык станциялары менен көрсөтүлгөн. Биздин компания Борбор Азиядагы расмий өкүл статусуна ээ. SDMO генератор комплекттери оор шарттарда иштөө үчүн иштелип чыккан. Ошондуктан аларды биздин Кардарларыбыз бийик тоолуу жана төмөнкү температуралык шарттарда жайларды, өндүрүштүк имараттарды, татаал медициналык жана ветеринардык жабдууларды гарантияланган электр энергиясы менен камсыздоо сыяктуу көйгөйлөрдү чечүү үчүн ийгиликтүү колдонушат. Биздин адистердин квалификациясы биздин компанияга дизелдик генератор орнотулган электр менен жабдуу тутумун орнотууга жана ишке киргизүүгө мүмкүндүк берет.
+        </p>
+        <h5>Насос жабдуулары</h5>
+        <p>
+          Имараттарда жана курулмаларда, ошондой эле коммуналдык чарбада, өнөр жайда жана жеке турак жайларда колдонулуучу жылытуу, суу менен камсыздоо, өрт өчүрүү, дренаж, кондициялоо жана муздатуу системалары үчүн насостук жабдуулар. Бул багытта биз Willo сыяктуу европалык өндүрүүчү менен кызматташат. Биздин адистер шаар жана айыл жергесинде насостук жабдууларды орнотуу боюнча тажрыйбага ээ.
         </p>
         <p>
-          Еще одно направление деятельности NSP связанно партнерскими отношениями с компанией BOSCH. Компетентность и опыт позволяет нам представлять всю линейку продуктов BOSCH: солнечная энергетика, системная интеграция строительных технологий, котельное оборудование, электроинструменты, системы безопасности и оповещения, мобильные дискуссионные системы.
+          Үзгүлтүксүз кубат булактары маалыматыңыздын жана маанилүү жабдууларыңыздын коопсуздугун кепилдейт. Биздин компания APC by Schneider Electric компаниясынан столдук компьютерлер, жумушчу станциялар, серверлер жана сактоо тутумдары үчүн, орто жана чоң маалымат борборлору үчүн, ошондой эле өнөр жай жана өндүрүштүк муктаждыктар үчүн кеңири спектрин сунуштайт. Биздин инженерлер дайыма квалификацияны жогорулатуу курстарынан өтүп турушат. Бул чөйрөдө биздин компанияда топтолгон бай тажрыйба бизге UPSти Кардардын өнөр жай жана IT структураларына киргизүүгө гана эмес, ошондой эле долбоорлоо, персоналды окутуу, учурдагы системаларды тейлөө жана аудит боюнча консалтингдик кызматтарды көрсөтүүгө, ал эми кээде жөн гана Кардарга колдоо көрсөтүүгө мүмкүндүк берет. зарыл маалыматтар менен.
+        </p>
+        <p>
+          NSP ишмердүүлүгүнүн дагы бир багыты BOSCH менен өнөктөштүккө байланыштуу. Компетенттүүлүк жана тажрыйба бизге BOSCH өнүмдөрүнүн бардык линиясын көрсөтүүгө мүмкүндүк берет: күн энергиясы, курулуш технологияларынын системалык интеграциясы, казан жабдуулары, электр шаймандары, коопсуздук жана эскертүү системалары, мобилдик талкуу системалары.
         </p>
         <h5 style="font-size: 22px;">
-          СЕТЕВЫЕ ТЕХНОЛОГИИ:
+          ТАРМАК ТЕХНОЛОГИЯЛАРЫ:
         </h5>
         <p>
-          Унифицированные коммуникации – это больше, чем просто телефонная система. Это единая система конечных устройств и программных приложений, объединяющая возможности сотовых, стационарных телефонов и рабочих терминалов по передаче данных, видео и голоса. Унифицированные коммуникации дают расширенные возможности совместной работы в режиме реального времени вне зависимости от удаленности партнеров или сотрудников друг от друга. Являясь официальным сертифицированным партнером компании 3CX, наша компания предоставляет качественные услуги по внедрению IP телефонной системы (VoIP) любой сложности.
+          Unified Communications бул жөн гана телефон тутуму эмес. Бул мобилдик, стационардык телефондордун жана маалыматтарды, видео жана үндү өткөрүү үчүн жумушчу терминалдардын мүмкүнчүлүктөрүн бириктирген акыркы түзүлүштөрдүн жана программалык тиркемелердин бирдиктүү тутуму. Бирдиктүү коммуникациялар өнөктөштөрдүн же кызматкерлердин бири-биринен алыстыгына карабастан, реалдуу убакытта кызматташуу үчүн кеңейтилген мүмкүнчүлүктөрдү берет. 3CX расмий тастыкталган өнөктөшү катары биздин компания ар кандай татаалдыктагы IP телефон системасын (VoIP) ишке ашыруу боюнча жогорку сапаттагы кызматтарды көрсөтөт.
         </p>
         <p>
-          Сетевое оборудование – это платформа для организации единой рабочей среды, которая позволяет объединить исполнительные устройства, системы слежения, датчики контроля и рабочие места.
-          В этом направлении мы тесно взаимодействуем с известными мировыми производителями CISCO, 3CX, Avaya, Polycom и др.
-          Интеллектуальное здание – это Система Управления Зданием (офис, жилой дом или квартира, производственное или промышленное помещение, животноводческое или тепличное хозяйство, и т.д.). Владелец такого здания не тратит время на контроль за работой инженерного оборудования. Эту функцию выполняют автоматизированные комплексы управления. Они не только включат, выключат и отрегулируют работу систем отопления, вентиляции и кондиционирования воздуха, освещения и электроснабжения, но и проинформируют оператора о возможных неполадках в работе систем, напомнят о необходимости проведения регламентных работ. При возникновении чрезвычайных ситуаций они приведут в действие необходимое оборудование и оповестят обитателей здания о путях и способах эвакуации.
+          Тармактык жабдуулар – бул кыймылдаткычтарды, көзөмөлдөө системаларын, башкаруу сенсорлорун жана жумушчу станцияларды бириктирүүгө мүмкүндүк берген бирдиктүү иш чөйрөсүн уюштуруу үчүн платформа. Бул багытта биз CISCO, 3CX, Avaya, Polycom ж.б. белгилүү дүйнөлүк өндүрүүчүлөр менен тыгыз кызматташып келебиз. Интеллектуалдык имарат – бул Building Management System (офис, турак жай же батир, өндүрүштүк же өндүрүштүк жайлар, мал чарбасы же күнөскана чарбасы ж.б.у.с.) .). Мындай имараттын ээси инженердик жабдуулардын иштешине көз салып, убакытты текке кетирбейт. Бул функцияны башкаруунун автоматташтырылган системалары аткарат. Алар жылытуу, желдетүү жана кондициялоо, жарыктандыруу жана электр менен жабдуу системаларын күйгүзүп, өчүрүп жана жөндөп гана тим болбостон, операторго системалардагы мүмкүн болгон көйгөйлөр жөнүндө маалымдап, аларга күнүмдүк техникалык тейлөөнүн зарылдыгын эскертет. Кырсык болгон учурда алар керектүү жабдууларды ишке киргизип, имараттын тургундарына эвакуациялоонун жолдору жана ыкмалары жөнүндө кабарлашат.
         </p>
-        <h5>СЕРВЕРЫ И СИСТЕМЫ ХРАНЕНИЯ ДАННЫХ</h5>
+        <h5>СЕРВЕРДЕР ЖАНА МААЛЫМАТТАРДЫ САКТОО СИСТЕМАЛАРЫ</h5>
         <p>
-          Центры обработки, управления, хранения и защиты данных, документов, каталогов и т.д. – это ключевое звено каждой организации и предприятия. Основой таких решений служат принципы производительности, масштабируемости, функциональности, динамичности и экономической выгоды.
+          Маалыматтарды, документтерди, каталогдорду ж.б. иштетүү, башкаруу, сактоо жана коргоо борборлору. — Бул ар бир уюмда, ишканада негизги звено болуп саналат. Мындай чечимдердин негизин аткаруу, масштабдуулук, функционалдык, динамизм жана экономикалык пайда принциптери түзөт.
         </p>
         <p>
-          В этом направлении мы тесно взаимодействуем с известными мировыми производителями компьютерной и серверной техники, устройствами по оперативному сбору и обработке данных. Такими как ORACLE (Sun Microsystems), Fujitsu, Motorola.
+          Бул багытта биз компьютердик жана сервердик жабдууларды, маалыматтарды тез чогултуу жана иштетүү үчүн түзүлүштөрдү чыгарган белгилүү дүйнөлүк өндүрүүчүлөр менен тыгыз кызматташып жатабыз. Мисалы, ORACLE (Sun Microsystems), Fujitsu, Motorola.
         </p>
         <p>
-          Разработка и внедрение систем ВИРТУАЛИЗАЦИИ и управления документооборотом позволяет нашим Заказчикам сокращать расходы на эксплуатацию и дополнительное приобретение оборудования в IT подразделения, эффективно вести складской и инвентаризационный учет.
+          ВИРТУАЛИЗАЦИЯ жана документ жүгүртүү системаларын иштеп чыгуу жана ишке киргизүү Кардарларыбызга IT бөлүмүндө операциялык чыгымдарды жана жабдууларды кошумча сатып алууну кыскартууга, кампа жана инвентаризациялык эсептерди натыйжалуу жүргүзүүгө мүмкүндүк берет.
         </p>
-        <h5>ПЕРСОНАЛ И СОТРУДНИКИ</h5>
+        <h5>КЫЗМАТКЕРЛЕР ЖАНА КЫЗМАТКЕРЛЕР</h5>
         <p>
-          Делая ставку на компетентность своих сотрудников, компания NSP систематически проводит их обучение на заводах производителей и дистрибьюторских платформах в Москве, Алматы, Франции, Бельгии, Германии. Это подтверждено соответствующими сертификатами. В распоряжении наших Заказчиков квалифицированные инженера, которые готовы осуществить любое техническое решение «под ключ».
+          Кызматкерлеринин компетенттүүлүгүнө көңүл буруп, NSP аларды Москвадагы, Алматыдагы, Франциядагы, Бельгиядагы жана Германиядагы өндүрүш ишканаларында жана дистрибьютордук аянтчаларында системалуу түрдө окутуп турат. Бул тиешелүү сертификаттар менен тастыкталат. Биздин кардарлардын карамагында квалификациялуу инженерлер бар, алар каалаган техникалык чечимди ачкыч тапшыруу шартында ишке ашырууга даяр.
         </p>
-        <h5>ПРИНЦИПЫ РАБОТЫ</h5>
+        <h5>ИШ ПРИНЦИПТЕРИ</h5>
         <p>
-          В своей работе компания NSP использует системный и индивидуальный подход к проектированию решений для каждого Заказчика. Мы предлагаем оригинальное оборудование, разумные цены, качественное обслуживание, профессиональное консультирование, обучение персонала и самое главное - ПАРТНЕРСКОЕ ОТНОШЕНИЕ.
+          NSP өз ишинде ар бир Кардар үчүн чечимдерди иштеп чыгууда системалуу жана жекече мамилени колдонот. Биз оригиналдуу жабдууларды, акылга сыярлык бааларды, сапаттуу тейлөөнү, профессионалдуу консалтингди, кызматкерлерди окутууну жана эң башкысы - ӨНӨКТӨШТҮКТҮ сунуштайбыз.
         </p>
         <p>
-          Мы сотрудничаем только с проверенными вендорами, что обеспечивает:
+          Биз ишенимдүү сатуучулар менен гана кызматташабыз, бул төмөнкүлөрдү камсыз кылат:
           <br>
-          - Гарантию качества продукции.
+          - Продукциянын сапатына кепилдик.
           <br>
-          - Любое решение только по приемлемым ценам.
+          - Кандай гана чечим болбосун акылга сыярлык баада.
           <br>
-          - Предоставление гарантийного и постгарантийного сервиса.
+          - Кепилдик жана кепилдиктен кийинки кызмат көрсөтүү.
           <br>
-          - Своевременные и исчерпывающие консультации.
+          - өз убагында жана ар тараптуу консультациялар.
           <br>
-          - Широкий ассортимент продукции.
+          - Продукциянын кеңири ассортименти.
           <br>
-          - Индивидуальный подход.
+          - Жеке мамиле.
           <br>
-          - Профессиональный сервис.
+          - Кесипкөй кызмат.
         </p>
-        <h5>СЕРВИСНОЕ ОБСЛУЖИВАНИЕ</h5>
+        <h5>СЕРВИСТИК ТЕЙЛӨӨ</h5>
         <p>
-          Компания NSP располагает складом запасных частей, который позволяет осуществлять гарантийное обслуживание оборудования в короткий срок.
+          NSP компаниясынын запастык тетиктердин кампасы бар, бул кыска убакыттын ичинде жабдууларды кепилдик тейлөөгө мүмкүндүк берет.
         </p>
-        <h5>НАШИ ЗАКАЗЧИКИ</h5>
+        <h5>БИЗДИН КАРДАРЛАР</h5>
         <p>
-          Широкая сфера интересов компании NSP позволяет удовлетворять потребности наших клиентов как в государственном так и в частном секторе.
+          NSPтин кызыкчылыктарынын кеңири спектри бизге мамлекеттик жана жеке секторлордогу кардарларыбыздын керектөөлөрүн канааттандырууга мүмкүндүк берет.
         </p>
         <p>
-          Мы создаём благоприятные интеллектуально-технические условия для успешной деятельности и развития Заказчика!
+          Биз Кардардын ийгиликтүү ишмердүүлүгү жана өнүгүүсү үчүн жагымдуу интеллектуалдык жана техникалык шарттарды түзөбүз!
         </p>
       </div>
     </div>
