--- a/contacts.html
+++ b/contacts.html
@@ -71,11 +71,11 @@
               <div class="request-has-been-sent">Ваш запрос отправлен!</div>
               <form action="" id="request-form">
                 <p>Ваше имя:</p>
-                <input type="text" name="name">
+                <input type="text" name="name" required>
                 <p>E-mail:</p>
-                <input type="text" name="email">
+                <input type="text" name="email" required>
                 <p>Введите ваше сообщение:</p>
-                <textarea name="message" id="" cols="20" rows="10" ></textarea>
+                <textarea name="message" id="" cols="20" rows="10"  required></textarea>
                 <input style="display:none;" type="text" name="lng" value="Язык сайта во время отправки сообщения: Русский">
 
                 <button type="submit">Отправить</button>
