--- a/contacts.kg.html
+++ b/contacts.kg.html
@@ -71,11 +71,11 @@
             <div class="request-has-been-sent">Сиздин өтүнүчүңүз жөнөтүлдү!</div>
             <form action="" id="request-form">
               <p>Сиздин атыңыз:</p>
-              <input type="text" name="name">
+              <input type="text" name="name" required>
               <p>E-mail:</p>
-              <input type="text" name="email">
+              <input type="text" name="email" required>
               <p>Билдирүүнү киргизиңиз:</p>
-              <textarea name="message" cols="20" rows="10" ></textarea>
+              <textarea name="message" cols="20" rows="10" required></textarea>
               <input style="display:none;" type="text" name="lng" value="Язык сайта во время отправки сообщения: Кыргызский">
 
               <button type="submit">Жөнөтүү</button>
