--- a/hosting.html
+++ b/hosting.html
@@ -51,7 +51,7 @@
       <div class="instructions-boxes">
         <div class="instructions-box">
           <p>
-            Выберите наболее подходящий тариф и нажмите кнопку "Заказать".
+            Выберите наболее подходящий тариф и нажмите кнопку "Заказать"
           </p>
         </div>
         <div class="instructions-box">
@@ -61,7 +61,7 @@
         </div>
         <div class="instructions-box">
           <p>
-            Совершив оплату, вы получите на почту письмо с данными для доступа к услуге.
+            Совершив оплату, вы получите на почту письмо с данными для доступа к услуге
           </p>
         </div>
       </div>  
@@ -75,7 +75,7 @@
           <img src="images/Rectangle%20538.jpg" alt="">
         </div>
         <div class="quality-right">
-          <h4>Высокое качество и<br>современное оборудование.</h4>
+          <h4>Высокое качество и современное оборудование.</h4>
           <p>Ваш проект будет работать всегда стабильно благодаря высокому уровню качества нашего сервиса и самому соверменному оборудованию расположенного в надежном дата-центре.</p>
         </div>
       </div>
