--- a/index.eng.html
+++ b/index.eng.html
@@ -134,7 +134,7 @@
       font-family: 'Noto Serif', serif;
       font-size: 24px;">
       Check out
-      <a href="#" style="text-decoration:underline;">
+      <a href="hosting.eng.html" style="text-decoration:underline;">
         the vps/hosting plans
       </a>
     </h4>
