--- a/contacts.eng.html
+++ b/contacts.eng.html
@@ -72,11 +72,11 @@
             <div class="request-has-been-sent">Your request has been sent! </div>
             <form action="" id="request-form">
               <p>Your name:</p>
-              <input type="text" name="name">
+              <input type="text" name="name" required>
               <p>E-mail:</p>
-              <input type="email" name="email">
+              <input type="email" name="email" required>
               <p>Enter your message:</p>
-              <textarea name="message" cols="20" rows="10" ></textarea>
+              <textarea name="message" cols="20" rows="10" required></textarea>
               <input style="display:none;" type="text" name="lng" value="Язык сайта во время отправки сообщения: Английский">
 
               <button>Send</button>
