--- a/hosting.eng.html
+++ b/hosting.eng.html
@@ -2,9 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Компания NSP</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;300;400;500&family=Montserrat:wght@300;400;500;700&family=Noto+Serif&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+<header class="header" id="header">
+  <div class="container">
+    <div class="header-row">
+      <a href="index.eng.html" class="logo"><img src="images/logo.svg" alt=""></a>
+      <nav class="main-nav nav-hidden" id="mainNav">
+        <div class="header-sides">
+          <div class="header-left">
+            <ul class="header-links">
+              <li class="header-link"><a href="hosting.eng.html">VPS/Hosting</a></li>
+              <li class="header-link"><a href="services.eng.html">Services</a></li>
+              <li class="header-link"><a href="events.eng.html">Events</a></li>
+              <li class="header-link"><a href="projects.eng.html">Projects</a></li>
+              <li class="header-link"><a href="contacts.eng.html">Contacts</a></li>
+            </ul>
+          </div>
+          <div class="header-right">
+            <a href="coordinates.eng.html" class="header-gps">Our coordinates</a>
+            <div class="header-language-dropdown">
+              <button class="current-language-btn eng" id="currentLanguageBtn">eng</button>
+              <ul class="language-list" id="languageList">
+                <li><a class="language-li eng" href="#">eng</a></li>
+                <li><a class="language-li ru" href="hosting.html">ru</a></li>
+                <li><a class="language-li kg" href="hosting.kg.html">kg</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <button class="nav-btn" type="button" id="navBtn">
+      </button>
+    </div>
+  </div>
+</header>
+<main>
+  <section class="instructions">
+    <div class="container">
+      <h3>Step-by-step ordering instructions:</h3>
+      <div class="instructions-boxes">
+        <div class="instructions-box">
+          <p>
+            Select the most suitable tariff and click the "Order" button
+          </p>
+        </div>
+        <div class="instructions-box">
+          <p>
+            You will be redirected to billing to make a secure payment
+          </p>
+        </div>
+        <div class="instructions-box">
+          <p>
+            After making the payment, you will receive an email with data to access the service
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr style="height: 1px; background-color:#A8A8A8;">
+  <section class="quality">
+    <div class="container">
+      <div class="quality-sides">
+        <div class="quality-left">
+          <img src="images/Rectangle%20538.jpg" alt="">
+        </div>
+        <div class="quality-right">
+          <h4>High quality and modern equipment.</h4>
+          <p>Your project will always work stably thanks to the high level of quality of our service and the most modern equipment located in a reliable data center.</p>
+        </div>
+      </div>
+      <div class="visit">
+        <h5>Come to our office</h5>
+        <a href="https://www.google.com/maps/place/Data+Center+NSP.+%D0%A6%D0%B5%D0%BD%D1%82%D1%80+%D0%9E%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8+%D0%94%D0%B0%D0%BD%D0%BD%D1%8B%D1%85+NSP/@42.8832678,74.6716099,18.92z/data=!4m6!3m5!1s0x389eb775c177ace3:0x90ffa5ee7e359508!8m2!3d42.8832916!4d74.6714127!16s%2Fg%2F11j2xbvmzr?entry=tts&shorturl=1">Kyrgyz Republic, Chui, Lebedinovka village, Lenina 262</a>
+      </div>
+    </div>
+  </section>
+  <section class="staff">
+    <div class="container">
+      <div class="staff-sides">
+        <div class="staff-left">
+          <img src="images/beautiful-smiling-woman-looking-friendly-ready-help-customer-client-holding-hands-together-staring-camera-white-background%201.png" alt="">
+        </div>
+        <div class="staff-right">
+          <div class="staff-logo">
+            <img src="images/logo-black.svg" alt="">
+            <div class="staff-slogan">
+              <span>network</span>
+              <span>servers</span>
+              <span>power</span>
+            </div>
+          </div>
+          <h3>Qualified staff</h3>
+          <p>We will quickly provide an answer to any of your questions from qualified system administrators.</p>
+          <a href="contacts.eng.html">Text us</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+<footer class="footer">
+  <div class="container">
+    <button class="btn-to-top"><img src="images/Group%2022.svg" alt=""></button>
+    <p>Copyright © 2008-2021 ОсОО "NSP"</p>
+  </div>
+</footer>
+<script>
+  document.querySelector(".btn-to-top").addEventListener('click', () => {
+    window.scrollTo({top: 0, behavior: 'smooth'});
+  })
+</script>
+<script src="js/language.js"></script>
+<script src="js/nav.js"></script>
 </body>
 </html>
