--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       font-family: 'Noto Serif', serif;
       font-size: 24px;">
         Ознакомьтесь
-        <a href="#" style="text-decoration:underline;">
+        <a href="hosting.html" style="text-decoration:underline;">
           с планами vps/хостинга
         </a>
       </h4>
