--- a/index.kg.html
+++ b/index.kg.html
@@ -132,7 +132,7 @@
       text-align:center;
       font-family: 'Noto Serif', serif;
       font-size: 24px;">
-      <a href="#" style="text-decoration:underline;">
+      <a href="hosting.kg.html" style="text-decoration:underline;">
         Vps/хостинг пландарын
       </a>
        окуңуз
